// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWallet 2nd step should render 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__second-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Your Passphrase
        </h1>
      </div>
    </div>
    <div
      class="sc-fzqARJ obTtk flex overflow-hidden flex-col space-y-5 rounded-lg border bg-theme-neutral-100 dark:bg-theme-neutral-800 border-theme-neutral-300 dark:border-theme-neutral-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
    >
      <div
        class="flex items-center justify-center text-theme-warning-600"
      >
        <div
          class="sc-AxhCb djOzjH"
          height="1.75em"
          width="1.75em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <span
        class="pointer-events-none border rounded-md border-theme-warning-600"
      />
      <div
        class="flex flex-col space-y-2"
      >
        <p
          class="leading-relaxed break-words"
        >
          This is your 12 word Mnemonic. Your mnemonic serves as your password and allows you to send any funds associated with your address. If lost, this mnemonic cannot be restored by anyone, including the ARK.io team. Please store this mnemonic in a safe location and do not share it with anyone.
        </p>
      </div>
    </div>
    <ul
      class="grid grid-cols-2 row-gap-5 col-gap-3 md:grid-cols-3 lg:grid-cols-4"
    >
      <li
        class="relative py-3 px-3 rounded border border-theme-neutral-light"
        data-testid="MnemonicList__item"
      >
        <span
          class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
        >
          1
        </span>
        <span
          class="font-medium text-theme-neutral-800"
        >
          test
        </span>
      </li>
      <li
        class="relative py-3 px-3 rounded border border-theme-neutral-light"
        data-testid="MnemonicList__item"
      >
        <span
          class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
        >
          2
        </span>
        <span
          class="font-medium text-theme-neutral-800"
        >
          mnemonic
        </span>
      </li>
    </ul>
    <div
      class="flex justify-end w-full"
    >
      <div
        class="inline-block cursor-pointer"
        data-testid="clipboard__wrapper"
      >
        <button
          class="sc-AxjAm dEdzdP"
          data-testid="CreateWallet__copy"
          type="button"
        >
          <div
            class="sc-AxhCb fxrKLH"
            height="1em"
            width="1em"
          >
            <svg>
              copy.svg
            </svg>
          </div>
          <span>
            Copy
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-AxiKw kXkCOd border-theme-neutral-300 dark:border-theme-neutral-800"
      type="horizontal"
    />
    <div
      class="flex justify-between items-center"
    >
      <div
        class="space-y-2"
      >
        <span
          class="text-lg font-semibold text-theme-secondary-text"
        >
          Download Your Passphrase
        </span>
        <p
          class="text-sm text-theme-neutral"
        >
          You can also download and safely store your passphrase.
        </p>
      </div>
      <div
        class="sc-AxhCb cCYhIn"
        height="40"
        width="40"
      >
        <svg>
          file-password.svg
        </svg>
      </div>
    </div>
    <div
      class="flex justify-end w-full"
    >
      <button
        class="sc-AxjAm dEdzdP flex items-center space-x-2"
        data-testid="CreateWallet__download"
        type="button"
      >
        <div
          class="sc-AxhCb fxrKLH"
          height="1em"
          width="1em"
        >
          <svg>
            download.svg
          </svg>
        </div>
        <span>
          Download
        </span>
      </button>
    </div>
    <div
      class="sc-AxiKw kXkCOd border-theme-neutral-300 dark:border-theme-neutral-800"
      type="horizontal"
    />
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should not have a pending wallet if leaving on step 1 1`] = `<DocumentFragment />`;

exports[`CreateWallet should remove pending wallet if not submitted 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyTs eYLloN"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="flex relative justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzoNJl hlUna-D"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-20 md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm iOqITs w-13 h-13 group text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxhCb bPyuTe p-1"
                      height="18"
                      width="15"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-neutral-800"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iwzaCc w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--send"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxhCb eHGcDb p-1"
                  height="18"
                  width="18"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iOqITs w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxhCb draJkT p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto mr-4 ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxhCb fxrKLH"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="inline-flex relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxhCb idmnCf"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 px-14 mx-auto font-semibold text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxhCb fcaRmH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 px-14 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 kuaQOz"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 bCyPTv"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to create your new wallet address
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="sc-AxirZ izhStr flex flex-col space-y-2"
                    >
                      <label
                        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                        <div
                          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fznxsB hhZPAY"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-fzoLag sc-fzoXzr jnLryM px-4"
                            >
                              <div
                                class="sc-AxgMl eLFBRi border-theme-neutral-200 dark:border-theme-neutral-700 text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a cryptoasset name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          class="hidden"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        />
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should remove pending wallet if not submitted 2`] = `<DocumentFragment />`;

exports[`CreateWallet should render 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyTs eYLloN"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="flex relative justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzoNJl hlUna-D"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-20 md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm iOqITs w-13 h-13 group text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxhCb bPyuTe p-1"
                      height="18"
                      width="15"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-neutral-800"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iwzaCc w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--send"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxhCb eHGcDb p-1"
                  height="18"
                  width="18"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iOqITs w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxhCb draJkT p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto mr-4 ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxhCb fxrKLH"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="inline-flex relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxhCb idmnCf"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 px-14 mx-auto font-semibold text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxhCb fcaRmH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 px-14 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 kuaQOz"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 bCyPTv"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to create your new wallet address
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="sc-AxirZ izhStr flex flex-col space-y-2"
                    >
                      <label
                        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                        <div
                          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fznxsB hhZPAY"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-fzoLag sc-fzoXzr jnLryM px-4"
                            >
                              <div
                                class="sc-AxgMl eLFBRi border-theme-neutral-200 dark:border-theme-neutral-700 text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a cryptoasset name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          class="hidden"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        />
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__first-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Select a Cryptoasset
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a cryptoasset to create your new wallet address
        </div>
      </div>
    </div>
    <fieldset
      class="sc-AxirZ izhStr flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="CreateWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="CreateWallet__network-input"
            id="CreateWallet__network-label"
          />
          <div
            class="sc-fznxsB hhZPAY"
            data-testid="SelectNetworkInput"
          >
            <div
              class="sc-fzoLag sc-fzoXzr jnLryM px-4"
            >
              <div
                class="sc-AxgMl eLFBRi border-theme-neutral-200 dark:border-theme-neutral-700 text-theme-neutral"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="CreateWallet__network-menu"
              aria-labelledby="CreateWallet__network-label"
              autocomplete="off"
              class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
              data-testid="SelectNetworkInput__input"
              id="CreateWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="CreateWallet__network-label"
          class="hidden"
          id="CreateWallet__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 1st step without test networks 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__first-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Select a Cryptoasset
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a cryptoasset to create your new wallet address
        </div>
      </div>
    </div>
    <fieldset
      class="sc-AxirZ izhStr flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="CreateWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="CreateWallet__network-input"
            id="CreateWallet__network-label"
          />
          <div
            class="sc-fznxsB hhZPAY"
            data-testid="SelectNetworkInput"
          >
            <div
              class="sc-fzoLag sc-fzoXzr jnLryM px-4"
            >
              <div
                class="sc-AxgMl eLFBRi border-theme-neutral-200 dark:border-theme-neutral-700 text-theme-neutral"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="CreateWallet__network-menu"
              aria-labelledby="CreateWallet__network-label"
              autocomplete="off"
              class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
              data-testid="SelectNetworkInput__input"
              id="CreateWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="CreateWallet__network-label"
          class="grid grid-cols-6 gap-6 mt-6"
          id="CreateWallet__network-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="inline-block cursor-pointer"
            data-testid="SelectNetwork__NetworkIcon--container"
            id="CreateWallet__network-item-0"
            role="option"
          >
            <div
              aria-label="ARK"
              class="sc-AxgMl hLfYuP border-theme-danger-light text-theme-danger-400"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-AxhCb dCXdPH"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            class="inline-block cursor-pointer"
            data-testid="SelectNetwork__NetworkIcon--container"
            id="CreateWallet__network-item-1"
            role="option"
          >
            <div
              aria-label="Compendia"
              class="sc-AxgMl hLfYuP border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-compendia.mainnet"
            >
              <div
                class="sc-AxhCb dCXdPH"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 2`] = `<DocumentFragment />`;

exports[`CreateWallet should render 4th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__fourth-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet creation is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div>
      <div
        class="sc-fznyAO deDoej"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-700"
          >
            Cryptoasset
          </div>
          <div
            class="font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="sc-AxgMl eQpXWo border-theme-primary-100 text-theme-primary-400"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-AxhCb VoPpj"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-fznyAO ccQaEh"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-700"
          >
            Address
          </div>
          <div
            class="font-semibold"
          >
            <div
              class="inline-flex items-center"
            >
              <span
                class="sc-fzpans kkFAbe text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                TEST-WALLET-ADDRESS
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="TEST-WALLET-ADDRESS"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"70\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
              title="TEST-WALLET-ADDRESS"
            />
          </div>
        </div>
      </div>
    </div>
    <fieldset
      class="sc-AxirZ izhStr flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
        data-testid="FormLabel"
        for="name"
      >
        Wallet name
        <span
          class="ml-1 text-theme-secondary-text"
          data-testid="FormLabel__optional"
        >
          (optional)
        </span>
      </label>
      <input
        class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
        data-testid="CreateWallet__wallet-name"
        name="name"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen bg-theme-secondary-background"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyTs eYLloN"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="flex relative justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzoNJl hlUna-D"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-20 md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm iOqITs w-13 h-13 group text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-700 hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxhCb bPyuTe p-1"
                      height="18"
                      width="15"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-neutral-800"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iOqITs w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxhCb eHGcDb p-1"
                  height="18"
                  width="18"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <button
                class="sc-AxjAm iOqITs w-13 h-13 text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-primary-dark hover:bg-theme-primary-50 dark:hover:bg-theme-neutral-800 dark:hover:text-theme-neutral-200"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxhCb draJkT p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    qr-code.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
            />
          </div>
          <div
            class="flex items-center my-auto mr-4 ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-neutral-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 -space-x-2 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-primary-contrast dark:border-theme-neutral-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxhCb fxrKLH"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="inline-flex relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500 dark:bg-theme-neutral-800 dark:border-theme-neutral-800 dark:text-theme-text"
                  >
                    <div
                      class="sc-AxhCb idmnCf"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 px-14 mx-auto font-semibold text-theme-secondary-text"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxhCb fcaRmH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-secondary-text"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 px-14 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 kuaQOz"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 bCyPTv"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dnPEAk"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to create your new wallet address
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="sc-AxirZ izhStr flex flex-col space-y-2"
                    >
                      <label
                        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                        <div
                          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fznxsB hhZPAY"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-fzoLag sc-fzoXzr jnLryM px-4"
                            >
                              <div
                                class="sc-AxgMl eLFBRi border-theme-neutral-200 dark:border-theme-neutral-700 text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-fzoyAV cdwlAN overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a cryptoasset name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          class="hidden"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        />
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm jWBCsI"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
